try fixing horizontal scrollbar on mobile

--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -23,6 +23,6 @@
 }
 
 #slider {
-  width: 93%;
+  width: 90%;
   margin: 0 auto 80px;
 }
